Update mkdocs deploy

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -6,8 +6,16 @@ on:
     paths:
       - 'docs/**'
       - 'mkdocs.yml'
+      - 'requirements.txt'  # Added this to trigger on requirements changes
       - '.github/workflows/documentation.yml'
   workflow_dispatch:  # Allow manual triggering
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
+      - 'requirements.txt'  # Added this to trigger on requirements changes
 
 permissions:
   contents: write
@@ -23,14 +31,20 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          cache: 'pip'  # Enable built-in pip caching
 
       - name: Install dependencies
-        run: |
-          pip install mkdocs-material
-          pip install pymdown-extensions
+        run: pip install -r 'requirements.txt'
+
+      - name: Build documentation
+        if: github.event_name == 'pull_request'
+        run: mkdocs build
 
       - name: Deploy documentation
+        if: github.event_name != 'pull_request'
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           mkdocs gh-deploy --force --remote-branch gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
