--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ guava = "33.2.1-jre"
 gson = "2.10.1"
 influxdbClient = "2.24"
 shadow-jar = "7.0.0"
+dokka = "1.9.10"
 
 # Tests
 junit = "4.13.2"
@@ -45,3 +46,4 @@ gradle-plugin-publish = { id = "com.gradle.plugin-publish", version.ref = "gradl
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 johnrengelman-shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow-jar" }
+dokka-gradle-plugin = { id = "org.jetbrains.dokka", version.ref = "dokka" }
